# hopeos

./: .gitignore  .vercelignore  README.md  setup.sh  vercel.json
backend/hopeos-backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  cloudbuild.yaml  deploy-cloudrun.sh  hopeos-backend.spec  main.py  pyproject.toml  requirements-vercel.txt  requirements.txt  run.sh  run_server.py  test.sh  test_analytics_ai.py  test_api.py  test_server.py
backend/hopeos-backend/app/: __init__.py  config.py  database.py  main.py
backend/hopeos-backend/app/auth/: __init__.py  dependencies.py  jwt.py  otp.py  password.py
backend/hopeos-backend/app/fhir/: __init__.py  synthea_loader.py
backend/hopeos-backend/app/routers/: __init__.py  ai.py  analytics.py  auth.py  catalogs.py  diagnoses.py  encounters.py  lab_orders.py  medications.py  observations.py  patients.py  pharmacy_orders.py  users.py  visits.py
backend/hopeos-backend/app/schemas/: __init__.py  analytics.py  auth.py  catalog.py  diagnosis.py  encounter.py  lab_order.py  medication.py  observation.py  patient.py  pharmacy_order.py  user.py  visit.py
backend/hopeos-backend/app/services/: ai_service.py  ehr_agent.py  ehr_tools.py  seed.py  seed_ncd_patient.py  seed_operational.py
backend/hopeos-backend/app/utils/: identifier.py
backend/hopeos-backend/scripts/: download_model.sh
backend/hopeos-backend/tests/: conftest.py  test_auth.py  test_catalogs.py  test_health.py  test_patients.py
docs/: EHR_AGENT_ARCHITECTURE.md  MIGRATION_PROGRESS.md  RASPBERRY_PI_DEPLOYMENT.md  SCRIPTS_README.md
(+88 files in other folders)
